[gd_scene load_steps=4 format=3 uid="uid://bytv4y0i5oqlg"]

[ext_resource type="Theme" uid="uid://bh3pao1yls74n" path="res://resources/themes/main_theme.tres" id="1_bxi4d"]
[ext_resource type="Script" uid="uid://bi4kbdc1rckyn" path="res://scripts/ui/TopInfoBar.gd" id="2_topbar"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_topbar"]
bg_color = Color(0.039, 0.059, 0.118, 0.85)
border_width_bottom = 2
border_color = Color(0, 0.898, 1, 0.8)
shadow_color = Color(0, 0.898, 1, 0.3)
shadow_size = 4

[node name="TopInfoBar" type="Panel"]
custom_minimum_size = Vector2(0, 50)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
theme = ExtResource("1_bxi4d")
theme_override_styles/panel = SubResource("StyleBoxFlat_topbar")
script = ExtResource("2_topbar")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 3.0
offset_right = -5.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ResourcesSection" type="ScrollContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="ResourcesFlow" type="HBoxContainer" parent="HBoxContainer/ResourcesSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 3
alignment = 1

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="UnitsSection" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1
